agrego DOM y JSON

--- a/index.html
+++ b/index.html
@@ -48,16 +48,20 @@
               <td class="table_columns">libertador 6200</td>
               <td class="table_columns">U$s1500 mensual</td>
               <div>
-                <label for="mensaje"></label>
-                <textarea
-                  name="texto"
-                  id="mensaje"
-                  cols="1"
-                  rows="3"
-                ></textarea>
-              </div>
-              <div>
-                <input type="button" value="selecccionar" />
+                <input
+                  type="text"
+                  id="nombreDelAlquiler"
+                  autocomplete="off"
+                  placeholder="Nombre"
+                />
+                <input
+                  type="text"
+                  id="precioDelAlquiler"
+                  autocomplete="off"
+                  placeholder="Precio"
+                />
+
+                <button id="enviado" type="submit">CARGAR</button>
               </div>
             </tr>
             <tr>
@@ -70,16 +74,20 @@
               <td class="table_columns">Guatemala 5500</td>
               <td class="table_columns">u$s1200 mensual</td>
               <div>
-                <label for="mensaje"></label>
-                <textarea
-                  name="texto"
-                  id="mensaje"
-                  cols="1"
-                  rows="3"
-                ></textarea>
-              </div>
-              <div>
-                <input type="button" value="selecccionar" />
+                <input
+                  type="text"
+                  id="nombreDelAlquiler"
+                  autocomplete="off"
+                  placeholder="Nombre"
+                />
+                <input
+                  type="text"
+                  id="precioDelAlquiler"
+                  autocomplete="off"
+                  placeholder="Precio"
+                />
+
+                <button id="enviado" type="submit">CARGAR</button>
               </div>
             </tr>
             <tr>
@@ -89,16 +97,20 @@
               <td class="table_columns">Av. Libertador 6100</td>
               <td class="table_columns">U$s600 mensual</td>
               <div>
-                <label for="mensaje"></label>
-                <textarea
-                  name="texto"
-                  id="mensaje"
-                  cols="1"
-                  rows="3"
-                ></textarea>
-              </div>
-              <div>
-                <input type="button" value="selecccionar" />
+                <input
+                  type="text"
+                  id="nombreDelAlquiler"
+                  autocomplete="off"
+                  placeholder="Nombre"
+                />
+                <input
+                  type="text"
+                  id="precioDelAlquiler"
+                  autocomplete="off"
+                  placeholder="Precio"
+                />
+
+                <button id="enviado" type="submit">CARGAR</button>
               </div>
             </tr>
             <tr>
@@ -110,17 +122,22 @@
               </td>
               <td class="table_columns">Av. Libertador 6300</td>
               <td class="table_columns">U$s500 mensual</td>
+
               <div>
-                <label for="mensaje"></label>
-                <textarea
-                  name="texto"
-                  id="mensaje"
-                  cols="1"
-                  rows="3"
-                ></textarea>
-              </div>
-              <div>
-                <input type="button" value="selecccionar" />
+                <input
+                  type="text"
+                  id="nombreDelAlquiler"
+                  autocomplete="off"
+                  placeholder="Nombre"
+                />
+                <input
+                  type="text"
+                  id="precioDelAlquiler"
+                  autocomplete="off"
+                  placeholder="Precio"
+                />
+
+                <button id="enviado" type="submit">CARGAR</button>
               </div>
             </tr>
           </table>
